--- a/index.html
+++ b/index.html
@@ -16487,7 +16487,7 @@ Champions is 87.35%
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>We take a look at teams offensive and defensive efficiencies. Offensive Efficiency is defined as a team's points scored per 100 possessions on the average D1 defense. Defensive Efficiency is defined as a team's points allowed per 100 possessions on the average D1 offense.</p>
+<p>We take a look at teams offensive and defensive efficiencies. Adjusted Offensive Efficiency (ADJOE) is defined as a team's points scored per 100 possessions on the average D1 defense. Adjusted Defensive Efficiency (ADJDE) is defined as a team's points allowed per 100 possessions on the average D1 offense.</p>
 
 </div>
 </div>
